# 2025RE-ALThon-10

./: .gitignore  README.md  Taskfile.yml  api.md  package-lock.json  test_payload.json
.cursor/rules/: cursor-rules.mdc  data-fetching.mdc  nextjs.mdc
.github/workflows/: build.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_evaluate_integration.py  test_from_attributes.py
backend/core/: config.json  config.py  encoder.py  inference.py  neighbor.py  schema.py  utils.py
backend/db/: database.py  dummy_data.json  dummy_data_list.py  dummy_data_user.py  dummy_seed.py
backend/models/: course.py  user.py
backend/repositories/: __init__.py  repository.py
backend/routers/: courses.py  evaluate.py  users.py
backend/schemas/: course.py  evaluate_request.py  student_form.py  user.py
backend/scripts/: import_courses.py  import_dummy_data.py  seed_user_vectors.py
docker/: .env.example  app.yml  db.yml  docker-compose.yml
frontend/: Dockerfile  STRUCTURE.md  THEME.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_hooks/: useAuth.ts  usePreferences.ts
frontend/app/_providers/: query-provider.tsx
frontend/app/_stores/: auth.ts  preferences.ts
frontend/app/_types/: auth.ts  course.ts  preference.ts
frontend/app/courses/: page.tsx
frontend/components/: hero.tsx  navbar.tsx
nginx/: api_backends.conf  nginx.conf
nginx/api_conf.d/: auth.conf  frontend.conf
(+28 files in other folders)
