[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.121.3",
    "google-genai>=1.52.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "pgvector>=0.2.0",
]
